--- a/IMATFrontOffice/IMATFrontOffice.csproj
+++ b/IMATFrontOffice/IMATFrontOffice.csproj
@@ -82,7 +82,7 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
-    <Content Include="WebForm1.aspx" />
+    <Content Include="IMATWebForm.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -90,12 +90,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebForm1.aspx.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
+    <Compile Include="IMATWebForm.aspx.cs">
+      <DependentUpon>IMATWebForm.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="WebForm1.aspx.designer.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
+    <Compile Include="IMATWebForm.aspx.designer.cs">
+      <DependentUpon>IMATWebForm.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
